--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,8 @@ a:visited
 {
 	color: #000000;
 }
+/*---CSS for tables----------------------------------------------------------*/
+table
+{
+	width: 25%;
+}
