--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,8 @@ table tr td
 /*---CSS for chapter page stuff--------------------------------------*/
 #ChapterMain
 {
-	width: 75%;
-	float: left;
+	text-align: center;
+	margin-left: 500px;
 }
 #ChapterBlogFeed
 {
@@ -108,13 +108,20 @@ table tr td
 	float: left;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
+	top: -57px;
 }
 #ChapterFooter
 {
 	clear: both;
 	text-align: center;
 }
+#ChapterHeader
+{
+	z-index: 0;
+}
 #ChapterHeader h1
 {
 	margin-bottom: 0;
+	margin-top: 0;
 }
