--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,8 @@ table tr td
 	float: left;
 	margin-left: auto;
 	margin-right: auto;
-	position: relative;
-	top: -57px;
+	position: absolute;
+	top: 123px;
 }
 #ChapterFooter
 {
@@ -125,3 +125,4 @@ table tr td
 	margin-bottom: 0;
 	margin-top: 0;
 }
+/*---CSS for leader portraits------------------------------------------*/
