--- a/css/style.css
+++ b/css/style.css
@@ -125,4 +125,4 @@ table tr td
 	margin-bottom: 0;
 	margin-top: 0;
 }
-/*---CSS for leader portraits------------------------------------------*/
+/*---CSS for  ----------------------------------------*/
